# almond

./: .dockerignore  .env.example  CONTEXT.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  docker-entrypoint.sh
.github/workflows/: docker-publish.yml
docs/: CHUNKED_UPLOAD.md
docs/plans/: 2025-01-08-bud07-cashu-payments.md  2026-01-23-upstream-redirect-mode-design.md
src/: constants.rs  error.rs  filter-test.html  handlers.rs  helpers.rs  index.html  lib.rs  main.rs  metrics.rs  middleware.rs  models.rs  tls.rs  trust_network.rs  utils.rs
src/handlers/: bloom.rs  delete.rs  file_serving.rs  filter.rs  fuse.rs  list.rs  metrics.rs  mod.rs  report.rs  stats.rs  upload.rs  upstream.rs  wot.rs
src/services/: auth.rs  blossom_servers.rs  cashu.rs  download.rs  file_storage.rs  hls.rs  mod.rs  upload.rs
