[package]
name = "almond"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
headers = "0.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
regex = "1"
mime_guess = "2"
axum-server = "0.7.2"
futures-util = "0.3.31"
sha2 = "0.10.8"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
hyper = "1.6.0"
dotenv = "0.15.0"
uuid = { version = "1.7", features = ["v4"] }
base64 = "0.21"
nostr = "0.28"
nostr-relay-pool = "0.40.1"
chrono = "0.4.41"
tokio-stream = "0.1"
bytes = "1"
async-stream = "0.3"
