[package]
name = "almond"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
headers = "0.4.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7.17", features = ["io"] }
regex = "1"
mime_guess = "2.0.5"
futures-util = "0.3.31"
sha2 = "0.10.8"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
hyper = "1.6.0"
dotenvy = "0.15.7"
uuid = { version = "1.18.1", features = ["v4"] }
base64 = "0.22.1"
nostr = "0.43.1"
nostr-relay-pool = "0.43.1"
chrono = "0.4.41"
tokio-stream = "0.1"
bytes = "1"
async-stream = "0.3"
bloomfilter = "1.0"
serde_urlencoded = "0.7.1"
axum-extra = { version = "0.12.1", features = ["query"] }
serde_html_form = "0.2.8"
prometheus = "0.13"
fs2 = "0.4"
xorf = "0.11"
bincode = "1.3"
