[package]
name = "almond"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "inspect_filter"
path = "src/bin/inspect_filter.rs"

[[bin]]
name = "analyze_reports"
path = "src/bin/analyze_reports.rs"

[dependencies]
axum = "0.8.8"
headers = "0.4.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7.18", features = ["io"] }
regex = "1"
once_cell = "1.21"
mime_guess = "2.0.5"
futures-util = "0.3.31"
sha2 = "0.10.9"
reqwest = { version = "0.13", features = ["json", "stream", "gzip", "brotli", "deflate"] }
hyper = "1.8.1"
dotenvy = "0.15.7"
uuid = { version = "1.20.0", features = ["v4"] }
base64 = "0.22.1"
nostr = "0.44.2"
nostr-relay-pool = "0.44.0"
chrono = "0.4.43"
tokio-stream = "0.1"
bytes = "1"
async-stream = "0.3"
bloomfilter = "3.0"
xorf = { version = "0.12", features = ["serde"] }
rmp-serde = "1.3"
serde_urlencoded = "0.7.1"
axum-extra = { version = "0.12.5", features = ["query"] }
serde_html_form = "0.4.0"
prometheus = "0.14"
fs2 = "0.4"
rmp = "0.8.15"

# Cashu payment support (BUD-07)
cdk = { version = "0.14", default-features = false, features = ["wallet"] }
cdk-sqlite = { version = "0.14", features = ["wallet"] }
cashu = "0.14"
rand = "0.10"

# HTTPS/TLS support
axum-server = { version = "0.8", features = ["tls-rustls"] }
rcgen = "0.14"
rustls-pemfile = "2.2"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
